fixed bug with player z-index, main sidebar now hidden

--- a/sass/partials/_overlay.scss
+++ b/sass/partials/_overlay.scss
@@ -17,7 +17,7 @@ $overlay-height: 420px;
   width: $overlay-width;
   height: $overlay-height;
   left: 50%;
-  margin-left: -$overlay-width/2 - 10;
+  margin-left: -$overlay-width/2;
   top: 50%;
   margin-top: -$overlay-height/2;
   z-index: 30;
